# mazegen

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_examples.yml
examples/: CMakeLists.txt  aldous_broder.cxx  binary_tree.cxx  sidewinder.cxx
include/mazegen/: algorithm.hxx  grid.hxx
src/: algorithm.cxx  grid.cxx
